force-app/main/default/objects/Headcount__c/Headcount__c.object-meta.xml
<CustomObject>
    <description>Prototype for T&amp;P Headcount Management functionality to be integrated into GUS</description>
    <label>Position</label>
    <nameField>
        <displayFormat>H-{00000}</displayFormat>
        <label>Position #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Roster</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>