force-app/main/default/objects/Headcount__c/fields/Backfill_Date__c.field-meta.xml
<CustomField>
    <fullName>Backfill_Date__c</fullName>
    <description>If an employee is being backfilled, enter the expected date of departure.</description>
    <label>Backfill Date</label>
    <type>Date</type>
</CustomField>