force-app/main/default/objects/Headcount__c/fields/Backfill_Name__c.field-meta.xml
<CustomField>
    <fullName>Backfill_Name__c</fullName>
    <label>Backfill Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>