force-app/main/default/objects/Headcount__c/fields/Cloud_Lock__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Lock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked prevents over writing Parent Cloud Value on Roster</description>
    <inlineHelpText>Parent Cloud has been separated from Team</inlineHelpText>
    <label>Parent Cloud Lock</label>
    <type>Checkbox</type>
</CustomField>