force-app/main/default/objects/Headcount__c/fields/Cloud_LU__c.field-meta.xml
<CustomField>
    <fullName>Cloud_LU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field has been replaced by Parent_Cloud__c field</description>
    <inlineHelpText>Use Parent_Cloud__c instead of this field as this field is deprecated now. Use this field only to refer to old values</inlineHelpText>
    <label>Cloud_Deprecated(Use Parent Cloud)</label>
    <referenceTo>ADM_Cloud__c</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Roster_Positions</relationshipName>
    <type>Lookup</type>
</CustomField>