force-app/main/default/objects/Headcount__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Free-text area to record notes on this Headcount.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>