force-app/main/default/objects/Headcount__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>