force-app/main/default/objects/Headcount__c/fields/Employee_Number_Text__c.field-meta.xml
<CustomField>
    <fullName>Employee_Number_Text__c</fullName>
    <description>A text copy of the Employee Number field is necessary because lookup fields and formula fields based on lookups are not indexed and not searchable. Only text, email and phone field types are searched.</description>
    <label>Employee Number (Text)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>