force-app/main/default/objects/Headcount__c/fields/FY_Starting_Cloud__c.field-meta.xml
<CustomField>
    <fullName>FY_Starting_Cloud__c</fullName>
    <label>FY Starting Cloud</label>
    <length>100</length>
    <type>Text</type>
</CustomField>