force-app/main/default/objects/Headcount__c/fields/Headcount_Department__c.field-meta.xml
<CustomField>
    <fullName>Headcount_Department__c</fullName>
    <inlineHelpText>Department can be entered manually by Finance, but will be auto-populated by the value from the User record in the Employee Name field (User Lookup) if available.</inlineHelpText>
    <label>Employee Department OLD</label>
    <length>100</length>
    <type>Text</type>
</CustomField>