force-app/main/default/objects/Headcount__c/fields/Headcount_Name__c.field-meta.xml
<CustomField>
    <fullName>Headcount_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of employee filling the position (lookup to User)</inlineHelpText>
    <label>Employee Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Headcounts</relationshipName>
    <type>Lookup</type>
</CustomField>