force-app/main/default/objects/Headcount__c/fields/Hiring_Manager_Department__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Manager_Department__c</fullName>
    <description>The department of the hiring manager, derived from the User record.</description>
    <formula>Hiring_Manager__r.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hiring Manager Department</label>
    <type>Text</type>
</CustomField>