force-app/main/default/objects/Headcount__c/fields/Initial_Status_Value__c.field-meta.xml
<CustomField>
    <fullName>Initial_Status_Value__c</fullName>
    <label>Initial Status Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>