force-app/main/default/objects/Headcount__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location_Deprecated</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Region__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alabama - Remote</fullName>
            </value>
            <value>
                <fullName>Arizona - Phoenix</fullName>
            </value>
            <value>
                <fullName>Arizona - Remote</fullName>
            </value>
            <value>
                <fullName>Australia - Melbourne</fullName>
            </value>
            <value>
                <fullName>Australia -  Sydney</fullName>
            </value>
            <value>
                <fullName>Belgium - Remote</fullName>
            </value>
            <value>
                <fullName>Brazil - Sao Paulo</fullName>
            </value>
            <value>
                <fullName>California - Remote</fullName>
            </value>
            <value>
                <fullName>Canada - Fredericton</fullName>
            </value>
            <value>
                <fullName>Canada - Halifax</fullName>
            </value>
            <value>
                <fullName>Canada - Remote</fullName>
            </value>
            <value>
                <fullName>Canada - Saint John</fullName>
            </value>
            <value>
                <fullName>Canada - Toronto</fullName>
            </value>
            <value>
                <fullName>Canada - Vancouver</fullName>
            </value>
            <value>
                <fullName>CA - Palo Alto</fullName>
            </value>
            <value>
                <fullName>CA - San Francisco</fullName>
            </value>
            <value>
                <fullName>CA - San Mateo</fullName>
            </value>
            <value>
                <fullName>CA - Santa Monica</fullName>
            </value>
            <value>
                <fullName>Colorado - Louisville</fullName>
            </value>
            <value>
                <fullName>Colorado - Remote</fullName>
            </value>
            <value>
                <fullName>Connecticut - Remote</fullName>
            </value>
            <value>
                <fullName>Denmark - Copenhagen</fullName>
            </value>
            <value>
                <fullName>Denmark - Remote</fullName>
            </value>
            <value>
                <fullName>Florida - Remote</fullName>
            </value>
            <value>
                <fullName>FL - Tampa</fullName>
            </value>
            <value>
                <fullName>France - Grenoble</fullName>
            </value>
            <value>
                <fullName>France - Paris</fullName>
            </value>
            <value>
                <fullName>France - Remote</fullName>
            </value>
            <value>
                <fullName>Georgia - Atlanta</fullName>
            </value>
            <value>
                <fullName>Georgia - Remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>