force-app/main/default/objects/Headcount__c/fields/Manager_IC__c.field-meta.xml
<CustomField>
    <fullName>Manager_IC__c</fullName>
    <description>Used to distinguish Managers from ICs</description>
    <label>Manager/IC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual Contributor</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>