force-app/main/default/objects/Headcount__c/fields/OOM__c.field-meta.xml
<CustomField>
    <fullName>OOM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Open Market Opportunity</label>
    <referenceTo>OMOpportunity__c</referenceTo>
    <relationshipLabel>Roster</relationshipLabel>
    <relationshipName>Roster</relationshipName>
    <type>Lookup</type>
</CustomField>