force-app/main/default/objects/Headcount__c/fields/OOM_Transfer__c.field-meta.xml
<CustomField>
    <fullName>OOM_Transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OOM Transfer?</label>
    <type>Checkbox</type>
</CustomField>