force-app/main/default/objects/Headcount__c/fields/OOM_Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>OOM_Transfer_Date__c</fullName>
    <label>OOM Transfer Date</label>
    <type>DateTime</type>
</CustomField>