force-app/main/default/objects/Headcount__c/fields/Original_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Effective_Date__c</fullName>
    <description>Stores the original Effective Date when a position is created</description>
    <label>Original Effective Date</label>
    <length>25</length>
    <type>Text</type>
</CustomField>