force-app/main/default/objects/Headcount__c/fields/Parent_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Parent_Cloud__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The parent cloud is what finance uses to track headcount with roster. The cloud object is what engineering leadership uses to drive engineering workflows.</inlineHelpText>
    <label>Parent Cloud</label>
    <referenceTo>ADM_Parent_Cloud__c</referenceTo>
    <relationshipLabel>Roster</relationshipLabel>
    <relationshipName>Roster</relationshipName>
    <type>Lookup</type>
</CustomField>