force-app/main/default/objects/Headcount__c/fields/Recruiter_Status__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Status__c</fullName>
    <description>Recruiter&#39;s -GYR signal for recruiting status on this position.</description>
    <inlineHelpText>Blank: no activity on this position 
Green: Likely to close within the assigned quarter 
Yellow: May close within the assigned quarter but I&#39;m not confident 
Red: Unlikely to close within assigned quarter
Blue: May close before assigned quarter</inlineHelpText>
    <label>Recruiter Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <default>true</default>
                <label>Green</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>