force-app/main/default/objects/Headcount__c/fields/Recruiter_Update__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Update__c</fullName>
    <description>Text description of Recruiter Status</description>
    <inlineHelpText>Enter your update here for hiring status on this position. Do not include confidential information.</inlineHelpText>
    <label>Recruiter Update</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>