force-app/main/default/objects/Headcount__c/fields/Source_Description__c.field-meta.xml
<CustomField>
    <fullName>Source_Description__c</fullName>
    <description>A place for notes related to the source field.</description>
    <inlineHelpText>A place for notes related to the source field.</inlineHelpText>
    <label>Source Description</label>
    <type>TextArea</type>
</CustomField>