force-app/main/default/objects/Headcount__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Open - New = New position added by Finance
Open - Backfill = Existing position available for Backfill
Offer - In Progress = Offer extended to candidate
Offer - Accepted = Offer accepted by candidate
Filled = Position filled by an employee</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open - New</fullName>
                <default>true</default>
                <label>Open - New</label>
            </value>
            <value>
                <fullName>Open - Backfill</fullName>
            </value>
            <value>
                <fullName>Offer In Progress</fullName>
            </value>
            <value>
                <fullName>Offer Accepted</fullName>
            </value>
            <value>
                <fullName>Filled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>