force-app/main/default/objects/Headcount__c/fields/Talentforce_Offer__c.field-meta.xml
<CustomField>
    <fullName>Talentforce_Offer__c</fullName>
    <inlineHelpText>Reference to Job ID in Talentforce, entered by Recruiting.</inlineHelpText>
    <label>Job ID</label>
    <length>14</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>