force-app/main/default/objects/Headcount__c/fields/Target_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Start_Date__c</fullName>
    <inlineHelpText>Target start date for candidates that have accepted an offer</inlineHelpText>
    <label>Target Start Date</label>
    <type>Date</type>
</CustomField>