force-app/main/default/objects/Headcount__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Scrum Team assigned to the position.</inlineHelpText>
    <label>Team</label>
    <referenceTo>ADM_Scrum_Team__c</referenceTo>
    <relationshipName>Headcount</relationshipName>
    <type>Lookup</type>
</CustomField>