force-app/main/default/objects/Headcount__c/fields/Team_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Team_Cloud__c</fullName>
    <formula>Team__r.Cloud_LU__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The cloud field is calculated by the team assigned to the roster record.</inlineHelpText>
    <label>Cloud</label>
    <type>Text</type>
</CustomField>