force-app/main/default/objects/Headcount__c/fields/via__c.field-meta.xml
<CustomField>
    <fullName>via__c</fullName>
    <label>via</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>New Hire</fullName>
            </value>
            <value>
                <fullName>Reciprocated Opportunity Open Market</fullName>
            </value>
            <value>
                <fullName>Reciprocated Transfer</fullName>
            </value>
            <value>
                <fullName>Left T&amp;P</fullName>
            </value>
            <value>
                <fullName>Unreciprocated Opportunity Open Market</fullName>
            </value>
            <value>
                <fullName>Unreciprocated Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>