force-app/main/default/objects/Headcount__c/validationRules/Backfill_Headcount_must_have_BF_name.validationRule-meta.xml
<ValidationRule>
    <fullName>Backfill_Headcount_must_have_BF_name</fullName>
    <active>false</active>
    <description>When marking a Headcount as &quot;Backfill,&quot; the Backfill Name field must be filled.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Open - Backfill&quot;), ISBLANK(Headcount_Name__c) )</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>When moving a Headcount to status &quot;Open - Backfill,&quot; there must be a name in the Headcount Name field, which will be moved into the Backfill Name field automatically.</errorMessage>
</ValidationRule>